--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,14 +1,213 @@
-header {
-    background: none repeat scroll 0 0 #A6C9E2;
-    color: #2E6E9E;
-    font-size: 20px;
-    padding: 5px 20px;
+BODY {
+    background-color: #e8e8e8;
+    color: #2f3628;
+    margin: 4px;
 }
 
-footer {
-    background: none repeat scroll 0 0 #A6C9E2;
-    color: #2E6E9E;
-    font-size: 20px;
-    padding: 5px 20px;
-    margin: 20px 0;
+H1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 7pt;
+    font-size: 24pt;
+}
+
+H2 {
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 5pt;
+    font-size: 22pt;
+}
+
+H3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 4pt;
+    font-size: 20pt;
+}
+
+H4 {
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 3pt;
+    font-size: 18pt;
+}
+
+H5 {
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 2pt;
+    font-size: 16pt;
+}
+
+H6 {
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: 1pt;
+    font-size: 15pt;
+}
+
+A:hover {
+    color: #466016;
+    text-decoration: underline;
+}
+
+A:active {
+    color: #ff0000;
+    text-decoration: underline;
+}
+
+A:visited {
+    color: #b2a76b;
+    text-decoration: underline;
+}
+
+A:link {
+    color: #466016;
+    text-decoration: underline;
+}
+
+HR {
+    border: 1px solid;
+    color: #c4c4c4;
+}
+
+P {
+    text-align: justify;
+}
+
+PRE {
+    display: block;
+    padding-left: 1em;
+    background-color: #f2f2f2;
+}
+
+.table_header_outer {
+    background-color: #c4c4c4;
+    width: 100%;
+    margin: 0;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
+.table_header_inner {
+    background-color: #c4c4c4;
+    width: 100%;
+    margin: 0;
+    border-style: none;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.table_main_section {
+    background-color: #e8e8e8;
+    width: 100%;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
+.table_footer {
+    background-color: #c4c4c4;
+    width: 100%;
+    margin: 0;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
+.td_header_outer {
+    background-color: #d1d1d1;
+    width: 100%;
+    padding: 0;
+}
+
+.td_header_inner_title {
+    background-color: #d1d1d1;
+    width: 100%;
+    padding: 5px;
+    vertical-align: top;
+    font-size: 30pt;
+    color: #2f3628;
+    white-space: nowrap;
+}
+
+.td_header_inner_logo {
+    background-color: #d1d1d1;
+    padding: 5px;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+.td_main_section_menu {
+    background-color: #d1d1d1;
+    padding: 5px;
+    vertical-align: top;
+    text-align: left;
+    white-space: nowrap;
+}
+
+.td_main_section_content {
+    background-color: #f2f2f2;
+    width: 100%;
+    padding: 5px;
+    font-size: 15pt;
+    color: #2f3628;
+    white-space: normal;
+}
+
+.td_footer {
+    background-color: #d1d1d1;
+    padding: 5px;
+    font-size: 12pt;
+    color: #2f3628;
+    letter-spacing: 3pt;
+    text-align: center;
+    white-space: normal;
+}
+
+.img_logo {
+    height: 45px;
+    border: none;
+}
+
+.rasporka {
+    width: 150px;
+}
+
+.float_bubble {
+    z-index: 1;
+    position: absolute;
+    background: #fdfdff;
+    border-left: #c4c4c4 1px solid;
+    border-right: #c4c4c4 1px solid;
+    border-top: #c4c4c4 1px solid;
+    border-bottom: #c4c4c4 1px solid;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    color: #2f3628;
+    font-size: 12pt;
+    margin: 8px;
+}
+
+.table_output {
+    width: 100%;
+    border-style: none;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.thead_output {
+    background-color: #c4c4c4;
+    text-align: left;
+}
+
+.tbody_output {
+    background-color: #f2f2f2;
+}
+
+.th_td_output {
+    padding: 5px;
 }
