--- a/web/css/style.css
+++ b/web/css/style.css
@@ -103,33 +103,24 @@ DD {
     vertical-align: top;
 }
 
+.img_logo {
+    height: 45px;
+    border: none;
+}
+
+.img_icon {
+    height: 16px;
+    border: none;
+    margin-right: 5px;
+}
+
+.img_action {
+    height: 16px;
+    border: none;
+    margin-right: 5px;
+}
+
 .table_header_outer {
-    background-color: #c4c4c4;
-    width: 100%;
-    margin: 0;
-    border-style: none;
-    border-collapse: separate;
-    border-spacing: 5px;
-}
-
-.table_header_inner {
-    background-color: #c4c4c4;
-    width: 100%;
-    margin: 0;
-    border-style: none;
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-.table_main_section {
-    background-color: #e8e8e8;
-    width: 100%;
-    border-style: none;
-    border-collapse: separate;
-    border-spacing: 5px;
-}
-
-.table_footer {
     background-color: #c4c4c4;
     width: 100%;
     margin: 0;
@@ -142,6 +133,15 @@ DD {
     background-color: #d1d1d1;
     width: 100%;
     padding: 0;
+}
+
+.table_header_inner {
+    background-color: #c4c4c4;
+    width: 100%;
+    margin: 0;
+    border-style: none;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 .td_header_inner_title {
@@ -161,6 +161,14 @@ DD {
     white-space: nowrap;
 }
 
+.table_main_section {
+    background-color: #e8e8e8;
+    width: 100%;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
 .td_main_section_menu {
     background-color: #d1d1d1;
     padding: 5px;
@@ -178,6 +186,56 @@ DD {
     white-space: normal;
 }
 
+.table_list_resume {
+    width: 100%;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
+.thead_list_resume {
+    background-color: #c4c4c4;
+    text-align: left;
+}
+
+.tbody_list_resume {
+    background-color: #f2f2f2; /* #e8e8e8; */
+}
+
+.th_td_list_resume {
+    padding: 5px;
+}
+
+.table_list_positions {
+    width: 100%;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
+.th_td_list_positions_1 {
+    background-color: #f2f2f2;
+    width: 25%;
+    padding: 5px;
+    white-space: nowrap;
+}
+
+.th_td_list_positions_2 {
+    background-color: #f2f2f2;
+    width: 75%;
+    padding: 5px;
+    white-space: normal;
+}
+
+.table_footer {
+    background-color: #c4c4c4;
+    width: 100%;
+    margin: 0;
+    border-style: none;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
 .td_footer {
     background-color: #d1d1d1;
     padding: 5px;
@@ -186,23 +244,6 @@ DD {
     letter-spacing: 3pt;
     text-align: center;
     white-space: normal;
-}
-
-.img_logo {
-    height: 45px;
-    border: none;
-}
-
-.img_icon {
-    height: 16px;
-    border: none;
-    margin-right: 5px;
-}
-
-.img_action {
-    height: 16px;
-    border: none;
-    margin-right: 5px;
 }
 
 .rasporka {
@@ -217,32 +258,9 @@ DD {
     border-right: #c4c4c4 1px solid;
     border-top: #c4c4c4 1px solid;
     border-bottom: #c4c4c4 1px solid;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px;
     color: #2f3628;
     font-size: 10pt;
     margin-top: 10px;
     margin-left: -5px;
-}
-
-.table_output {
-    width: 100%;
-    border-style: none;
-    border-collapse: separate;
-    border-spacing: 5px;
-}
-
-.thead_output {
-    background-color: #c4c4c4;
-    text-align: left;
-}
-
-.tbody_output {
-    background-color: #e8e8e8;
-}
-
-.th_td_output {
-    padding: 5px;
 }
