--- a/web/css/style.css
+++ b/web/css/style.css
@@ -87,22 +87,6 @@ PRE {
     background-color: #f2f2f2;
 }
 
-DL {
-    margin: 8px 0;
-    padding: 0;
-}
-
-DT {
-    display: inline-block;
-    width: 250px;
-}
-
-DD {
-    display: inline-block;
-    margin-left: 8px;
-    vertical-align: top;
-}
-
 .img_logo {
     height: 45px;
     border: none;
@@ -264,4 +248,29 @@ DD {
     font-size: 10pt;
     margin-top: 10px;
     margin-left: -5px;
+}
+
+FORM {
+    width: 100%;
+}
+
+INPUT {
+    width: 100%;
+}
+
+.form_div {
+    display: table;
+    width: 100%;
+    float: top;
+}
+
+.form_label {
+    display: table-cell;
+    width: 250px;
+    white-space: nowrap;
+}
+
+.form_span {
+    display: table-cell;
+    padding: 0 0 0 0;
 }
