--- a/web/css/style.css
+++ b/web/css/style.css
@@ -256,6 +256,16 @@ FORM {
 
 INPUT {
     width: 100%;
+    height: 22px;
+    font-size: 10pt;
+}
+
+TEXTAREA {
+    width: 100%;
+    resize: vertical;
+    min-height: 22px;
+    height: 22px;
+    font-size: 10pt;
 }
 
 .form_div {
